Snakefile name changes

--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,16 @@
-simulations:  
-    my_flat:
+simulations:
+    myflat:
         topology: 'flat 10'
         simulations-number: 1
         region: 'chr1_30'
         mutation-rates: [0.001, 0.005]
         chemistry: 'P6C4'
         coverages: [40, 60, 80]
-        accuracies: [85, 90, 95] 
+        accuracies: [85, 90, 95]
         length-mean: 18000
         length-sd: 3000
-        type: 'leaves' 
-    my_random:
+        type: 'leaves'
+    myrandom:
         topology: 'random 10'
         simulations-number: 4
         region: 'chr1_30'
@@ -23,5 +23,5 @@ simulations:
         type: 'all'
 regions:
     chr1_30:
-       region: 'chr1:30000000-30200000'
+       coordinates: 'chr1:30000000-30200000'
        reference: 'hg38'
