--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ connection-pool==0.0.3
 cycler==0.11.0
 datrie==0.8.2
 docutils==0.18.1
+edlib==1.3.9
 filelock==3.4.2
 fonttools==4.28.5
 gitdb==4.0.9
